* Refactoring mostly complete * Improved documentation * Improved testing * Still may tweak some method names, etc.